Fix missing opens statement, consistency issues